syntax = "proto3";

package NAlice.NData.NReminders;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/reminders";
option java_package = "ru.yandex.alice.protos.data.scenario.reminders";

import "mapreduce/yt/interface/protos/extension.proto";

message TState {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TReminder {
        reserved 3;
        reserved "Epoch";
        string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
        string Text = 2 [json_name = "text", (NYT.column_name) = "text"];
        string TimeZone = 4 [json_name = "timezone", (NYT.column_name) = "timezone"];
        // UniqId of the original device which is set this reminder.
        string Origin = 5 [json_name = "origin", (NYT.column_name) = "origin"];
        uint64 ShootAt = 6 [json_name = "shoot_at", (NYT.column_name) = "shoot_at"];
    }

    repeated TReminder Reminders = 1 [json_name = "reminders", (NYT.column_name) = "reminders"];
}
